# word-vector-embedding-visualization

./: .gitignore  README.md  pyproject.toml
src/: display_ui.py  embedding.py  file_utils.py  main.py  plot_utils.py  utils.py
